--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -10,8 +10,8 @@
       </h1>
     </div>
     <div class="hero-links">
-      <button class="hero-left-side_navigation_button" type="submit">Products</button>
-      <a class="hero-left-side_navigation_nav" href="#">How it's made?</a>
+      <button class="hero-links_button" type="submit">Products</button>
+      <a class="hero-links_nav" href="#">How it's made?</a>
     </div>
     <div class="franchise-numbers">
       <p>16</p>
@@ -29,8 +29,12 @@
       </svg>
     </div>
     <div class="ice-cream-img-wrapper">
-      <img alt="" class="ice-cream-img" src="./images/hero-header/ice-cream.png"
-        srcset="./images/hero-header/ice-cream@2x.png 2x, ./images/hero-header/ice-cream@3x.png 3x" />
+      <img
+        alt=""
+        class="ice-cream-img"
+        src="./images/hero-header/ice-cream.png"
+        srcset="./images/hero-header/ice-cream@2x.png 2x, ./images/hero-header/ice-cream@3x.png 3x"
+      />
     </div>
     <svg class="icon-dots" width="320" height="50">
       <use href="./images/svg/symbol-defs.svg#icon-kropki"></use>
